@@ -19,6 +19,9 @@ Revision history for Perl extension Module::Build.
 
   - correctly report missing metafile field names [David Golden]
 
+  - suppress uninitialized value errors during Pod creation
+    on ActiveState Perl [David Golden]
+
 0.36_17 - Wed Oct 27 18:08:36 EDT 2010
 
   Enhancements:
